# zebra-crosslink

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  DELIVERABLES.md  README.md  SCOPING.md  bash_commands_to_create_a_chain.txt  checked_in_sl_test_net_genesis.hex  command_to_submit_test_net_genesis.txt  crosslink-testnet.md  flake.nix  vibe_coded_script_to_create_a_test_net_genesis.sh
.github/ISSUE_TEMPLATE/: config.yml  zebra_crosslink_issue.yml
.github/workflows/: main.yml  shieldedlabs-main.yml  shieldedlabs-mdbook.yml  shieldedlabs-sync-upstream.yml  shieldedlabs-tests.yml  sub-ci-unit-tests-docker.yml  zizmor.yml
.helix/: languages.toml
book/src/: README.md  SUMMARY.md  crosslink.md  milestone-4a-workshop.md
book/src/crosslink/: SCOPING.md  adrs.md  changes-to-zebra.md  design.md  impl-overview.md  implementation.md  protocols.md  roadmap.md  scope-and-goals.md  zebra-crosslink-chain.md
book/src/design/: DELIVERABLES.md  deliverables.md
book/src/user/: build-and-usage.md  nix.md
crosslink-test-data/: blocks.zeccltf  wrong_branch_test1.zeccltf  wrong_branch_test1_short_pos_long.zeccltf  wrong_branch_test2_long_short_pos.zeccltf  zeccltf.hexpat
docker/: Dockerfile  run_all_tests_once.sh
shieldedlabs/: milestone1_demo_instructions.md
shieldedlabs/librustzcash/zcash_client_backend/proto/: service.proto
shieldedlabs/librustzcash/zcash_client_backend/src/proto/: service.rs
shieldedlabs/zaino/: CONTRIBUTING.md  Cargo.toml  README.md
shieldedlabs/zaino/.config/: nextest.toml
shieldedlabs/zaino/docs/: internal_spec.md  rpc_api.md  testing.md  use_cases.md
shieldedlabs/zaino/integration-tests/: Cargo.toml
shieldedlabs/zaino/integration-tests/tests/: client_rpcs.rs  fetch_service.rs  local_cache.rs  state_service.rs  wallet_to_validator.rs
shieldedlabs/zaino/zaino-fetch/: Cargo.toml
shieldedlabs/zaino/zaino-fetch/src/jsonrpc/: connector.rs
shieldedlabs/zaino/zaino-proto/proto/: service.proto
shieldedlabs/zaino/zaino-proto/src/proto/: compact_formats.rs  service.rs
shieldedlabs/zaino/zaino-serve/src/rpc/: service.rs
shieldedlabs/zaino/zaino-serve/src/server/: grpc.rs
shieldedlabs/zaino/zaino-state/: Cargo.toml
shieldedlabs/zaino/zaino-state/src/: config.rs  fetch.rs  indexer.rs  mempool.rs  state.rs
shieldedlabs/zaino/zaino-state/src/local_cache/: finalised_state.rs  non_finalised_state.rs
shieldedlabs/zaino/zaino-testutils/: Cargo.toml
shieldedlabs/zaino/zaino-testutils/src/: lib.rs
shieldedlabs/zaino/zainod/: Cargo.toml  zindexer.toml
shieldedlabs/zaino/zainod/src/: config.rs  indexer.rs
shieldedlabs/zcash-devtool/: Cargo.toml
shieldedlabs/zcash-devtool/src/: commands.rs  main.rs
shieldedlabs/zcash-devtool/src/commands/: set_finality.rs
src/commands/wallet/: list_addresses.rs
zaino-fetch/src/jsonrpc/: response.rs
zaino-serve/: Cargo.toml
zaino-state/src/: local_cache.rs  status.rs  utils.rs
zebra-bftblock/: Cargo.toml
zebra-bftblock/src/: lib.rs
zebra-chain/: Cargo.toml
zebra-chain/src/: block.rs  history_tree.rs
zebra-chain/src/block/: arbitrary.rs  commitment.rs  hash.rs  header.rs  merkle.rs  serialize.rs
zebra-chain/src/block/tests/: vectors.rs
zebra-chain/src/history_tree/tests/: vectors.rs
zebra-chain/src/parameters/: network_upgrade.rs  tests.rs
zebra-chain/src/parameters/network/: testnet.rs  tests.rs
zebra-chain/src/parameters/network/tests/: vectors.rs
zebra-chain/src/primitives/: zcash_history.rs  zcash_primitives.rs
zebra-chain/src/primitives/zcash_history/tests/: vectors.rs
zebra-chain/src/sapling/tests/: tree.rs
zebra-chain/src/transaction/: arbitrary.rs
zebra-chain/src/transaction/tests/: vectors.rs
zebra-chain/src/work/: difficulty.rs  equihash.rs
zebra-chain/src/work/tests/: prop.rs
zebra-consensus/: Cargo.toml
zebra-consensus/src/: transaction.rs
zebra-consensus/src/block/: tests.rs
zebra-consensus/src/transaction/: tests.rs
zebra-consensus/src/transaction/tests/: prop.rs
zebra-crosslink/: Cargo.toml  build.rs
zebra-crosslink-chain/: Cargo.toml
zebra-crosslink-chain/src/: bft.rs  lib.rs  params.rs  util.rs
zebra-crosslink/proto/: consensus.proto  liveness.proto  sync.proto
zebra-crosslink/src/: chain.rs  lib.rs  mal_system.rs  malctx.rs  service.rs  test_format.rs  viz.rs
zebra-crosslink/tests/: crosslink.rs  integration_test.rs
zebra-network/: Cargo.toml
zebra-network/proptest-regressions/peer_set/set/tests/: prop.txt
zebra-network/src/: config.rs
zebra-network/src/config/tests/: vectors.rs
zebra-rpc/: Cargo.toml
zebra-rpc/src/: methods.rs  server.rs
zebra-rpc/src/config/: mining.rs
zebra-rpc/src/methods/tests/: prop.rs  snapshot.rs  vectors.rs
zebra-rpc/src/methods/types/: get_block_template.rs
zebra-rpc/src/methods/types/get_block_template/: proposal.rs
zebra-rpc/src/server/tests/: vectors.rs
zebra-rpc/tests/: serialization_tests.rs
zebra-scan/src/: tests.rs
zebra-state/: Cargo.toml
zebra-state/src/: crosslink.rs  lib.rs  request.rs  response.rs  service.rs
zebra-state/src/service/: non_finalized_state.rs  tests.rs  write.rs
zebra-state/src/service/finalized_state/: disk_db.rs
zebra-state/src/service/finalized_state/disk_format/tests/: snapshot.rs
zebra-state/src/service/finalized_state/zebra_db/block/tests/: snapshot.rs
zebra-state/src/service/non_finalized_state/tests/: prop.rs  vectors.rs
zebra-state/src/service/read/: find.rs
zebrad/: Cargo.toml
zebrad/src/: application.rs  config.rs
zebrad/src/commands/: start.rs
zebrad/src/components/: mempool.rs  miner.rs
zebrad/src/components/sync/tests/: vectors.rs
zebrad/tests/: acceptance.rs  crosslink.rs
