[package]
name = "zebra-crosslink"
version = "1.0.0-beta.45"
edition = "2021"

[dependencies]
zebra-chain = { path = "../zebra-chain", version = "1.0.0-beta.45" }
zebra-state = { path = "../zebra-state", version = "1.0.0-beta.45" }

serde = { workspace = true, features = ["serde_derive"] }
toml = { workspace = true }

futures = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true, features = ["time", "rt-multi-thread", "macros", "tracing", "signal"] }
tokio-stream = { workspace = true, features = ["time"] }
tower = { workspace = true, features = ["hedge", "limit"] }
pin-project = { workspace = true }

color-eyre = { workspace = true, features = ["issue-url"] }
# This is a transitive dependency via color-eyre.
# Enable a feature that makes tinyvec compile much faster.
tinyvec = { workspace = true, features = ["rustc_1_55"] }

thiserror = { workspace = true }

tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing-error = { workspace = true }
tracing-futures = { workspace = true }
tracing = { workspace = true }

# General dependencies
async-trait = "0.1"
bytes = "1.9"
derive-where = "1.2"
eyre = "0.6"
libp2p-identity = "0.2"
multiaddr = "0.18.2"
rand = "0.8"
serde_json = "1.0"
sha3 = "0.10"
tempdir = "0.3.7"

static_assertions = { workspace = true }

macroquad = { version = "0.4.14", optional = true }
macroquad-profiler = { version = "0.2.0", optional = true }
# macroquad transitive dependencies:
image = { version = "0.24", default-features = false, features = ["png", "tga"], optional = true }
miniquad = { version = "0.4.8", optional = true }

[features]
default = ["viz_gui"]
viz_gui = ["macroquad", "macroquad-profiler", "image", "miniquad"]

[dependencies.malachitebft-app-channel]
version = "0.0.1"
# This adds the `informalsystems-malachitebft-app-channel` as a dependency, but exposes it
# under `malachitebft_app_channel` instead of its full package name.
git = "https://git@github.com/informalsystems/malachite.git"
package = "informalsystems-malachitebft-app-channel"

[dependencies.malachitebft-config]
version = "0.0.1"
git = "https://git@github.com/informalsystems/malachite.git"
package = "informalsystems-malachitebft-config"

[dependencies.malachitebft-test]
version = "0.0.1"
git = "https://git@github.com/informalsystems/malachite.git"
package = "informalsystems-malachitebft-test"

[dependencies.malachitebft-test-cli]
version = "0.0.1"
git = "https://git@github.com/informalsystems/malachite.git"
package = "informalsystems-malachitebft-test-cli"

[dependencies.malachitebft-proto]
version = "0.0.1"
git = "https://git@github.com/informalsystems/malachite.git"
package = "informalsystems-malachitebft-proto"
