[package]
name = "integration-tests"
description = "Crate containing Zaino's integration-tests."
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[dependencies]
# Test utility
zaino-testutils = { workspace = true }
zaino-fetch = { workspace = true }
zaino-proto.workspace = true
zaino-state.workspace = true
zebra-chain.workspace = true
zebra-state.workspace = true
zebra-rpc.workspace = true
futures.workspace = true

# Test fixtures
zingo-infra-testutils = { workspace = true }

# Lightclient
zingolib = { workspace = true }

# Runtime
tokio = { workspace = true }

# Logging
tracing-subscriber = { workspace = true }

# Url
url = { workspace = true }
